@startuml

title __ADAPT's Class Diagram__\n

  namespace sample {
    class sample.Controller {
    }
  }
  

  namespace sample {
    class sample.Main {
    }
  }
  

  namespace sample {
    namespace Metods {
      interface sample.Metods.Adaptee {
      }
    }
  }
  

  namespace sample {
    namespace Metods {
      class sample.Metods.Adapter {
      }
    }
  }
  

  namespace sample {
    namespace Metods {
      class sample.Metods.Client {
      }
    }
  }
  

  sample.Controller o-- sample.Metods.Adapter : adapter
  sample.Main -up-|> javafx.application.Application
  sample.Metods.Adapter .up.|> sample.Metods.Adaptee
  sample.Metods.Adapter o-- sample.Metods.Client : client


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
